# Deployment

kubernetes/: README.md
kubernetes/Components/: Kubernetes_components.md
kubernetes/K8sdeployment/: Dockerfile  README.md  main.py  pyproject.toml  server.sh
kubernetes/K8sdeployment/minideployment/: Dockerfile  README.md  deployment.yaml  pyproject.toml  server.sh
kubernetes/K8sdeployment/minideployment/myhelm/: values.yaml
kubernetes/Minikube/: README.md  pods_nodes.md
poetry-pet/: Dockerfile  README.md  pyproject.toml
poetry-pet/tests/: test_poetry_pet.py
