[tool.poetry]
name = "poetry-pet"
version = "0.1.0"
description = ""
authors = ["Nandhagopalan <nandhu.elan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
transformers = "^4.12.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
