[tool.poetry]
name = "minik8s_deployment"
version = "0.1.0"
description = ""
authors = ["Nandhagopalan <nandhu.elan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.1.0"
Flask = "^2.0.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
